Replace depreciated Base64 encoder